# ct-search

./: .env.example  .gitignore  .impeccable.md  AGENTS.md  DESIGN.md  PRODUCT.md  PROSPECTING_RUNBOOK.md  README.md  modal_app.py  pyproject.toml
.claude/: launch.json
.github/: copilot-instructions.md
.impeccable/: design.json
docs/: decision-framework.md  deploy.md  form-d-enrichment-spec.md  match-spec.md  overview.md  provider-routing-advisor.md  spec.md
frontend/: .env.example  next.config.ts  package-lock.json  package.json
frontend/src/app/: desk.css  globals.css  layout.tsx  page.tsx
frontend/src/app/pitch/: page.tsx
frontend/src/app/workbench/: page.tsx
frontend/src/components/: Workspace.tsx
frontend/src/lib/: api.ts  format.ts
frontend/src/types/: research.ts
src/ct_search/: __init__.py  intent.py  main.py  models.py  prospecting_cli.py  provider_knowledge.py  providers.py  resolve.py  runs.py  settings.py  store.py  telemetry.py  thesis.py
src/ct_search/eval/: edna_queries.yaml  recompute_scores.py  run_eval.py
tests/: test_app.py  test_edgar.py  test_extraction.py  test_intent.py  test_knowledge.py  test_resolve.py  test_runs.py  test_thesis.py
