[project]
name = "ct-search"
version = "0.1.0"
description = "A Python research and enrichment workbench for private-capital search workflows."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "logfire[fastapi,httpx,pydantic]>=4.35.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.2",
    "parallel-web>=0.5.0",
    "pydantic-settings>=2.4.0",
    "python-multipart>=0.0.9",
    "pyyaml>=6.0.3",
    "reportlab>=4.2.2",
    "uvicorn[standard]>=0.30.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.2",
    "ruff>=0.6.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ct_search"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
